<resources>
    <string name="app_name">Movie List</string>
    <string name="fields_required">All fields required!</string>
    <string name="placeholder">Placeholder</string>
    <string name="placeholder_year">2019</string>
    <string name="placeholder_release">Release:</string>
    <string name="input_info">The most popular movies of</string>
    <string name="submit_btn">Submit</string>
    <string name="movie_overview">Overview</string>
</resources>
