<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="match_parent"
    android:fillViewport="false"
    android:orientation="vertical">

    <android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".view.DisplayMovieActivity">

        <ImageView
            android:id="@+id/backdropImage"
            android:layout_width="0dp"
            android:layout_height="227dp"
            android:contentDescription="@string/placeholder"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/placeholder" />

        <ImageView
            android:id="@+id/posterImage"
            android:layout_width="153dp"
            android:layout_height="227dp"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:contentDescription="@string/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backdropImage"
            app:srcCompat="@drawable/placeholder" />

        <TextView
            android:id="@+id/movieTitle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:text="@string/placeholder"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/posterImage"
            app:layout_constraintTop_toBottomOf="@+id/backdropImage" />

        <TextView
            android:id="@+id/movieRelease"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="10dp"
            android:text="@string/placeholder_release"
            android:textSize="14sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/posterImage"
            app:layout_constraintTop_toBottomOf="@+id/movieTitle" />

        <TextView
            android:id="@+id/textView4"
            android:layout_width="153dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/movie_overview"
            android:textColor="@color/colorBackgroundDark"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/posterImage" />

        <TextView
            android:id="@+id/movieDescription"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="12dp"
            android:text="@string/placeholder"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView4" />

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="25dp"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="18dp"
            android:backgroundTint="@color/colorAccent"
            android:contentDescription="@string/placeholder"
            app:layout_constraintEnd_toStartOf="@+id/movieRating"
            app:layout_constraintStart_toEndOf="@+id/posterImage"
            app:layout_constraintTop_toBottomOf="@+id/movieRelease"
            app:srcCompat="@android:drawable/btn_star_big_on" />

        <TextView
            android:id="@+id/movieRating"
            android:layout_width="wrap_content"
            android:layout_height="31dp"
            android:layout_marginStart="14dp"
            android:layout_marginTop="13dp"
            android:paddingTop="10dp"
            android:text="@string/placeholder"
            android:textColor="@color/colorPrimary"
            android:textSize="14sp"
            android:textStyle="bold"
            app:layout_constraintStart_toEndOf="@+id/imageView"
            app:layout_constraintTop_toBottomOf="@+id/movieRelease" />
    </android.support.constraint.ConstraintLayout>
</ScrollView>